--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ dash-renderer==1.3.0
 dash-table==4.6.2
 docutils==0.15.2
 Flask==1.1.2
+Flask-Caching==1.8.0
 Flask-Compress==1.4.0
 funcy==1.14
 future==0.18.2
@@ -34,9 +35,11 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 jmespath==0.9.5
 joblib==0.14.1
+llvmlite==0.31.0
 MarkupSafe==1.1.1
 more-itertools==8.2.0
 murmurhash==1.0.2
+numba==0.48.0
 numexpr==2.7.1
 numpy==1.18.2
 packaging==20.3
@@ -66,8 +69,10 @@ smart-open==1.10.0
 spacy==2.2.4
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
 srsly==1.0.2
+tbb==2019.0
 thinc==7.4.0
 tqdm==4.45.0
+umap-learn==0.4.0
 urllib3==1.25.8
 wasabi==0.6.0
 wcwidth==0.1.9
